Fixed logic behind questions and answers

--- a/src/components/Styles/JokersStyle.css
+++ b/src/components/Styles/JokersStyle.css
@@ -21,6 +21,10 @@
     cursor: pointer;
 }
 
+.friend-answer, .audience-answer {
+    color: white;
+}
+
 .fifty-fifty-joker-button {
     padding: .4rem;
 }
